--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-spellcheck": "^0.0.19",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
     "typescript": "4.3.5"
   }
 }
