--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "bootstrap": "4.6.0",
@@ -18,8 +20,15 @@
     "sass": "^1.35.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@storybook/addon-actions": "^6.3.4",
+    "@storybook/addon-essentials": "^6.3.4",
+    "@storybook/addon-links": "^6.3.4",
+    "@storybook/react": "^6.3.4",
     "@types/react": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
@@ -28,6 +37,8 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.2",
+    "sass-loader": "10",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "4.3.5"
   }
 }
