--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-spellcheck": "^0.0.19",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.0",
