--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
     "bootstrap": "4.6.0",
     "classnames": "^2.3.1",
     "next": "11.0.1",
@@ -18,6 +19,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
     "sass": "^1.35.2"
   },
   "devDependencies": {
