--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
+    "redux-persist": "^6.0.0",
     "sass": "^1.35.2"
   },
   "devDependencies": {
