--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.0",
     "bootstrap": "4.6.0",
     "classnames": "^2.3.1",
+    "mobile-detect": "^1.4.5",
     "next": "11.0.1",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
